<resources>
    <string name="app_name">Bird Solution</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_e_shop">E_shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_fav">Favourite</string>
    <string name="title_cart">Cart</string>
    <string name="shopbycategory">Shop By Category</string>
    <string name="flashproduct">Flush Product</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notification</string>
    <string name="order_track">Order_track</string>
    <string name="profile">Profile</string>
    <string name="change_pass">change password</string>
    <string name="refere">Add</string>
    <string name="contact">Contract</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="sharapp">Share</string>
    <string name="faq">Favourite</string>
    <string name="terms_conditions">terms_conditions</string>
    <string name="privacy_policy">privacy_policy</string>
    <string name="logout">Logout</string>
    <string name="is_login">login?</string>
    <string name="refresh">Refresh</string>
    <string name="filterby">Filter</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="exit_msg">Please click BACK again to exit</string>
    <string name="wallet_balance">User name</string>
    <string name="Suggetion">Suggetion</string>
    <string name="eshop">E-Shop</string>
    <string name="doctor">Doctor</string>
    <string name="cancel">Cancel</string>
    <string name="title_call">Doctor call</string>
    <string name="title_medicine">medicine</string>
    <string name="title_food">Food</string>
    <string name="title_prescription">prescription</string>
    <string name="total_amt">total_amt</string>
    <string name="delivery_charge">delevery_charge</string>
    <string name="cart_subtotal">cart_subtotal</string>
    <string name="checkout">cheakout</string>
    <string name="noitem_incart">No Item In Cart</string>
    <string name="noitem_incart_msg">Please add product to cart</string>
    <string name="shop_now">shop_now</string>
    <string name="no_fav_found">no_fav_found</string>
    <string name="no_category_found">catagory_not_found</string>
    <string name="no_data_found">No_data_found</string>
    <string name="login_">Login</string>
    <string name="Emali">Email</string>
    <string name="password_">Password</string>
    <string name="forgottext">forget password</string>
    <string name="not_registered">do not have an account? Singup here</string>
    <string name="personal_info">Perrsonal Information</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="msg_privacy_terms"><![CDATA[Tearms & Condition]]></string>
    <string name="submit">Submit</string>
    <string name="shopbySubcategory">Sub Category</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="quantity">Quantity</string>
    <string name="product_details">Product Details</string>
    <string name="buynow">Buy Now</string>
    <string name="addToCart">Add To Cart</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>