<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:textColor="@color/white"
       />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/faq"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/faq" />

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_tracker"
            android:icon="@drawable/ic_order_track_24"
            android:title="@string/order_track" />


        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/changePass"
            android:icon="@drawable/ic_password_24"
            android:title="@string/change_pass" />
    </group>





    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">


    </group>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>