<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lytBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:weightSum="5"
    android:backgroundTint="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/lythome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="OnClickBtn"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            app:srcCompat="@drawable/ic_home" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_home"
            android:textColor="@color/white"
            android:textSize="@dimen/p_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytcategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="OnClickBtn"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_category_24" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_category"
            android:textColor="@color/white"
            android:textSize="@dimen/p_text_size" />

    </LinearLayout>
<LinearLayout
        android:id="@+id/lytfloatingbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="OnClickBtn"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_add_24" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/lytfav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="OnClickBtn"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_favorite_24" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_fav"
            android:textColor="@color/white"
            android:textSize="@dimen/p_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytcart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="OnClickBtn"

        android:orientation="vertical">


        <ImageView
            android:id="@+id/img5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_cart_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_cart"
            android:textColor="@color/white"
            android:textSize="@dimen/p_text_size" />
    </LinearLayout>
</LinearLayout>